syntax = "proto3";

package synk;

import "google/protobuf/timestamp.proto";

option go_package = "./";

message Write {
  WriteType write_type = 1;
  WriteData write_data = 2;
  repeated string columns = 3;
  string access_token = 4;
  string sheet_id = 5;
  string spreadsheet_id = 6;
  google.protobuf.Timestamp timestamp = 7;
}

enum WriteType {
    WRITE_FULL = 0;
}

message Value {
  string value = 1;
}

message WriteData {
    repeated Value values = 1;
}
